--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,22 @@
 language: python
 python:
   - "2.7"
+
+sudo: false
+
+env:
+  global:
+    - AWS_DEFAULT_REGION=eu-west-1
+    - PYTHONPATH=$TRAVIS_BUILD_DIR:$PYTHONPATH
+
+install:
+  - pip install pytest
+
+script:
+  - test.py
+
 install: true
+
 deploy:
   file: "alexa-christmas-countdown.py"
   provider: lambda
