Now adding lambda deployment step

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,6 @@ deploy:
   skip_cleanup: true
   on:
     branch: master
-#after_deploy:
-#  script:
-#  - aws lambda update-function-code --function-name 'AlexaChristmasCountdown' --s3-bucket
-#    'alexa-christmas-countdown-s3' --s3-key 'lambda.zip'
+after_deploy:
+  script:
+  - aws lambda update-function-code --function-name 'AlexaChristmasCountdown' --s3-bucket 'alexa-christmas-countdown-s3' --s3-key '$TRAVIS_COMMIT.zip'
