--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ deploy:
   on:
     branch: master
 after_deploy:
-  - aws lambda update-function-code --function-name 'AlexaChristmasCountdown' --s3-bucket 'alexa-christmas-countdown-s3' --s3-key '$TRAVIS_COMMIT.zip'
+  - aws lambda update-function-code --function-name AlexaChristmasCountdown --s3-bucket alexa-christmas-countdown-s3 --s3-key latest.zip
